proposed API for helm chart import
