# api/spec/openapi.yaml
@@ -1,6 +1,5 @@
 # Generated with protoc-gen-openapi
 # https://github.com/kollalabs/protoc-gen-openapi
-
 openapi: 3.0.3
 info:
   title: Application Catalog API
@@ -490,6 +489,64 @@ paths:
         "200":
           description: OK
           content: {}
+  /catalog.orchestrator.apis/v3/import:
+    post:
+      tags:
+        - CatalogService
+      summary: Import
+      description: |-
+        Allows importing a deployment package from a Helm Chart. This is done as a single invocation with the URL
+         of the asset to be imported.
+      operationId: CatalogService_Import
+      parameters:
+        - name: url
+          in: query
+          description: Required URL of Helm Chart to import
+          schema:
+            maxLength: 1000
+            type: string
+        - name: username
+          in: query
+          description: Optional username for downloading from the URL
+          schema:
+            maxLength: 1000
+            pattern: ^\PC*$
+            type: string
+        - name: authToken
+          in: query
+          description: Optional authentication token or password for downloading from the URL
+          schema:
+            maxLength: 4500
+            pattern: ^\PC*$
+            type: string
+        - name: chartValues
+          in: query
+          description: Optional raw byte value containing the chart values as raw YAML bytes.
+          schema:
+            maxLength: 4000000
+            type: string
+        - name: includeAuth
+          in: query
+          description: If true and a username/auth_token is specified then they will be included in the generated Registry object.
+          schema:
+            type: boolean
+        - name: generateDefaultValues
+          in: query
+          description: If true and chart_values is not set, then the values.yaml will be extracted and used to generate default profile values.
+          schema:
+            type: boolean
+        - name: generateDefaultParameters
+          in: query
+          description: Generates default parameters from the values, from chart_values or from generate_default_values as appropriate.
+          schema:
+            type: boolean
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ImportResponse'
   /catalog.orchestrator.apis/v3/registries:
     get:
       tags:
@@ -1166,6 +1223,15 @@ components:
         registry:
           $ref: '#/components/schemas/Registry'
       description: Response message for the GetRegistry method.
+    ImportResponse:
+      type: object
+      properties:
+        errorMessages:
+          type: array
+          items:
+            type: string
+          description: Any error messages encountered either during chart parsing or entity creation or update.
+      description: Response message for the Import method
     ListApplicationsResponse:
       required:
         - applications
